jenkins/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: jenkins
spec:
  type: NodePort
  selector:
    app: jenkins
  ports:
    - name: web
      protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 32001
    - name: agent
      protocol: TCP
      port: 50000
      targetPort: 50000
